--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.LastFm"
         tools:targetApi="31">
         <activity
-            android:name=".TopArtists"
+            android:name=".Vista.TopArtists"
             android:exported="false"/>
         <activity
-            android:name=".SplashScreen"
+            android:name=".Vista.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
