--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.LastFm"
         tools:targetApi="31">
         <activity
-            android:name=".Vista.TopArtists"
+            android:name=".Vista.VistaTopArtists"
             android:exported="false"/>
         <activity
             android:name=".Vista.SplashScreen"
