--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation "com.airbnb.android:lottie:6.0.0"
     //Slider
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+    //Retrofit
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    //glide imagen
+    implementation("com.github.bumptech.glide:glide:4.12.0")
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
